--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,8 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Scrum Alliance
+  uni: Certified Scrum Product Owner®
+  year: 2018
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: University of Portsmouth
+  uni: BSc (Hons) Music & Sound Technology 2:1
+  year: 2009-2012
