--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,4 +1,8 @@
 # Degree
+- degree: General Assembly
+  uni: GA Product Management
+  year: 2020
+
 - degree: Scrum Alliance
   uni: Certified Scrum Product Owner®
   year: 2018
