--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,5 @@
 # Interests
-- description: Music
-- description: Sailing
-- description: Tech
+- description: <b>Music</b>; Listening, DJing, Record Collecting, Live Events
+- description: <b>Outdoors</b>; Sailing, Hiking, Climbing
+- description: <b>Technology</b>; Creative Technologies, Gaming, Privacy
+- description: <b>Design</b>; Graphic Design, Contemporary Art
