--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "London"
 resume_header_contact_info:     "ethanillingworth@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Hello, I’m Ethan. I’m a creative person, with an analytical approach to problem solving. I most enjoy working with inspiring teams to deliver high-quality digital product on projects with integrity. I strive to distill technical complexity and cutting-edge practices to deliver real value to end-users.</p>"
+resume_header_intro: "<p>Hello, I’m Ethan. I’m a creative person, with an analytical approach to problem solving. I most enjoy working with inspiring startup teams to deliver high-quality digital product on projects with integrity. I strive to distill technical complexity and cutting-edge practices to deliver real value to end-users.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
