--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,9 +5,9 @@
 - project: Guru Meditation
   role: Founder & Label Manager
   duration: 2017 &mdash; Present
-  description: <a href="https://gurumeditation.zone" target="_blank">Guru Meditation</a> is an electronic music label tracing connections between computer electronics and therapeutic compositions. This solo project enables me to channel my creative output but also encompasses a broad range of skills including; A&R, graphic design, vinyl production, marketing, event coordination, promotion & web development.
+  description: <a href="https://gurumeditation.zone" target="_blank">Guru Meditation</a> is an electronic music label tracing connections between computer electronics and therapeutic compositions. This solo project enables me to channel my creative output but also encompasses a broad range of skills including; A&R, graphic design, vinyl production, web development, marketing, event coordination & promotion.
 
 - project: Diary, She Wrote
   role: Recording Engineer, Composer
   duration: 2018 &mdash; 2020
-  description: <a href="https://www.diaryshewrote.com/" target="_blank">Diary, She Wrote</a> is a Top 5 Apple podcast about the complexities of sex, dating & coping with grief. I facilitated the podcast recordings and engineered each session, then whilst working alongside Liz helped turn these recordings into a fully packaged first series. I also contributed by writing musical interludes including a main theme to the podcast.
+  description: <a href="https://www.diaryshewrote.com/" target="_blank">Diary, She Wrote</a> is a Top 5 Apple podcast about the complexities of sex, dating & coping with grief. I facilitated the podcast recordings and engineered each session, then whilst working alongside the creator, helped turn these recordings into a fully packaged first series. I also contributed by writing musical interludes including a main theme to the podcast.
