--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,5 @@
 # Interests
-- description: <b>Music</b>; Listening, DJing, Record Collecting, Live Events
-- description: <b>Outdoors</b>; Sailing, Hiking, Climbing
-- description: <b>Technology</b>; Creative Technologies, Gaming, Privacy
-- description: <b>Design</b>; Graphic Design, Contemporary Art
+- description: <b>Music</b>; Listening, DJing, record collecting, live events
+- description: <b>Outdoors</b>; Sailing, hiking, climbing
+- description: <b>Technology</b>; Creative technologies, gaming
+- description: <b>Design</b>; Graphic design, contemporary art
