hqi and mixcloud

--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,5 @@
 # Interests
-- description: <b>Music</b>; Listening, DJing, record collecting, live events
+- description: <b>Music</b>; Listening, <a href="https://www.mixcloud.com/illersss/stream/" target="_blank">DJing</a>, record collecting, live events
 - description: <b>Outdoors</b>; Sailing, hiking, climbing
 - description: <b>Technology</b>; Creative technologies, gaming
 - description: <b>Design</b>; Graphic design, contemporary art
