--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,3 +11,8 @@
   role: Recording Engineer, Composer
   duration: 2018 &mdash; 2020
   description: <a href="https://www.diaryshewrote.com/" target="_blank">Diary, She Wrote</a> is a Top 5 Apple podcast about the complexities of sex, dating & coping with grief. I facilitated the podcast recordings and engineered each session, then whilst working alongside the creator, helped turn these recordings into a fully packaged first series. I also contributed by writing musical interludes including a main theme to the podcast.
+
+- project: HQI
+  role: Resident
+  duration: 2018 &mdash; Present
+  description: Resident sonic artist at <a href="https://h-q-i.com/" target="_blank">HQI</a>, an artist run non-profit providing arts facilities to visual and recording artists.
