--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,11 +1,11 @@
 # Skills
 # Organizational leadership
 - skill: Scrum
-  description: Facilitating sprint planning, daily scrums, retrospectives, stakeholder meetings, and software demonstrations as a Product Owner across several scrum teams of varying sizes/skillsets
+  description: Facilitating sprint planning, daily scrums, brainstorming sessions, stakeholder updates, and software demonstrations as a Product Owner across several scrum teams.
 
 # Communications strategy
 - skill: Agile Methodologies
-  description: Adopting agile frameworks to plan and monitor product development with constant stakeholder feedback, and guided projects to completion on time, within scope, and on budget.
+  description: Adopting agile frameworks to plan and monitor product development with constant iteration on ideas based on stakeholder feedback. I've guided complex projects to completion on time, within scope, and on budget.
 
 # Digital content development and creation
 - skill: Technical Toolbox
