--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "London"
 resume_header_contact_info:     "ethanillingworth@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Hello, I’m Ethan. I’m a creative person, with an analytical approach to problem solving. I most enjoy working with inspiring startup teams to deliver high-quality digital product on projects with integrity. I strive to distill technical complexity and cutting-edge practices to deliver real value to end-users.</p>"
+resume_header_intro: "<p>Hello, I’m Ethan. I’m a creatively-driven person with an analytical approach to problem solving. I enjoy working with inspiring technology teams to deliver high-quality digital product on projects that I'm deeply passionate about.</p>I've worked on products, services, protocols and platforms all the way from idea to launch in sectors such as Web3, Ticketing, and Music"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -52,7 +52,7 @@ resume_social_links:
   resume_linkedin_url:          "https://www.linkedin.com/in/ethanillingworth"
   # resume_instagram_url:         "insert your Instagram URL here"
   resume_website_url:           "http://gurumeditation.zone"
-  resume_medium_url:            "https://medium.com/@illersss"
+  # resume_medium_url:            "https://medium.com/@illersss"
 resume_print_social_links:      true
 
 # Design settings
