see it action button tweaks

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
   company: Aventus Network Services
   position: Product Manager
   duration: Dec, 2020 &mdash; Present
-  summary: Lead Product Manager working on the <a href="https://www.aventus.io/" target="_blank">Aventus Network</a>, a scalable layer-2 for Ethereum that dramatically reduces network gas fees for transactions.	<ul class="resume-item-list"><li>Built and launched to production a secure, open-source public blockchain platform for enterprise use</li><li>Coordinating and scaling an interdisciplinary development team to ensure product success on target deadlines for go-to market</li><li>The Aventus Network has over 6 million users already and is trusted to hold several $million worth of cryptographic token assets</li></ul><center><a href="http://stats.aventus.io/#/" target="_blank">See it in action ☞ 🌐</a></center>
+  summary: Lead Product Manager working on the <a href="https://www.aventus.io/" target="_blank">Aventus Network</a>, a scalable layer-2 for Ethereum that dramatically reduces network gas fees for transactions.	<ul class="resume-item-list"><li>Built and launched to production a secure, open-source public blockchain platform for enterprise use</li><li>Coordinating and scaling an interdisciplinary development team to ensure product success on target deadlines for go-to market</li><li>The Aventus Network has over 6 million users already and is trusted to hold several $million worth of cryptographic token assets</li></ul><center><a href="http://stats.aventus.io/#/" target="_blank" style="color:black;text-decoration:none;"><u>See it in action</u> ☞ 🌐</a></center>
 
 # Artos, Product Manager
 - logo: images/artos-logo.jpg
