removed 'portfolio' mentions in metadata

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Ethan's Portfolio"
-description: "Ethan Illingworth's professional portfolio"
+title: "Ethan Illingworth"
+description: "Ethan Illingworth's professional profile"
 
 # Build settings
 markdown: kramdown
