--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,17 @@
 # Jobs
 
+# Cudos, Blockchain Product Manager
+- logo: images/cudos-logo.png
+  company: Cudos Ventures
+  position: Blockchain Product Manager
+  duration: May, 2021 &mdash; Present
+  summary: Building the <a href="https://www.cudos.org/" target="_blank">Cudos Network</a>, a scalable compute blockchain enabling more efficient use of the world’s existing computing resources.
+  
 # Aventus, Product Manager
 - logo: images/aventus-logo.png
   company: Aventus Network Services
   position: Product Manager
-  duration: Dec, 2020 &mdash; Present
+  duration: Dec, 2020 &mdash; May, 2021
   summary: Lead Product Manager working on the <a href="https://www.aventus.io/" target="_blank">Aventus Network</a>, a scalable layer-2 for Ethereum that dramatically reduces network gas fees for transactions.	<ul class="resume-item-list"><li>Built and launched to production a secure, open-source public blockchain platform for enterprise use</li><li>Coordinating and scaling an interdisciplinary development team to ensure product success on deadlines for target go-to market</li><li>The Aventus Network has over 6 million users already and is trusted to hold several $million worth of cryptographic token assets</li></ul><center><a href="http://explorer.aventus.io/#/" target="_blank" style="color:black;text-decoration:none;"><u>See it in action</u> ☞ 🌐</a></center>
 
 # Artos, Product Manager
