--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ resume_section_interests:       true
 resume_social_links:
   # resume_github_url:            "https://github.com/jglovier/resume-template"
   resume_twitter_url:           "http://twitter.com/ethan_ill"
-  # resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_ethereum_url:          "https://rainbow.me/ethanill.eth"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/ethanillingworth"
   # resume_instagram_url:         "insert your Instagram URL here"
