--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -12,7 +12,7 @@
   company: Aventus Network Services
   position: Product Manager
   duration: Dec, 2020 &mdash; May, 2021
-  summary: Built the <a href="https://www.aventus.io/" target="_blank">Aventus Network</a>, a scalable, enterprise-grade, Proof of Stake layer-2 on Ethereum.	<ul class="resume-item-list"><li>Built and launched to production a secure, open-source blockchain platform for enterprise use in tandem with client partnerships</li><li>Coordinating and scaling an interdisciplinary development team to ensure product success on deadlines for target go-to market</li><li>The Aventus Network has over 8 million users and is trusted to hold several $million worth of cryptographic token assets</li></ul>
+  summary: Built the <a href="https://www.aventus.io/" target="_blank">Aventus Network</a>, a scalable, enterprise-grade, Proof of Stake layer-2 for Ethereum.	<ul class="resume-item-list"><li>Built and launched a secure, open-source blockchain platform for enterprise use using Polkadot's Substrate SDK in the parachain ecosystem</li><li>Coordinating and scaling an interdisciplinary development team to ensure product success on deadlines for target go-to market</li><li>The Aventus Network has over 8 million users and is trusted to hold several $million worth of cryptographic token assets</li></ul>
 
 # Artos, Product Manager
 - logo: images/artos-logo.jpg
