--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,5 @@
 # Interests
-- description: <b>Music</b>; Listening, <a href="https://www.mixcloud.com/illersss/stream/" target="_blank">DJing</a>, record collecting, live events
-- description: <b>Outdoors</b>; Sailing, hiking, climbing
+- description: <b>Music</b>; Listening, making, collecting, <a href="https://www.mixcloud.com/illersss/stream/" target="_blank">playing</a>
+- description: <b>Outdoors</b>; Sailing, hiking, bouldering
 - description: <b>Technology</b>; Creative technologies, gaming
-- description: <b>Design</b>; Graphic design, contemporary art
+- description: <b>Arts</b>; <a href="https://www.are.na/ethan-ill" target="_blank">Design</a>, cinema, architecture
