--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ resume_name:                    "Ethan Illingworth"
 resume_title:                   "Product Manager"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "ethanillingworth@gmail.com"
+resume_contact_email:           "ethan_ill@proton.me"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "+447775666365"
 resume_contact_address:         "London"
 
-resume_header_contact_info:     "ethanillingworth@gmail.com"
+resume_header_contact_info:     "ethan_ill@proton.me"
 display_header_contact_info:    "false"
 
 # use "yes" to display the email contact button,
