--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,12 +3,12 @@
 
 - project: Bronze
   role: Advisor
-  duration: 2019 &mdash; Present
+  duration: 2019
   description: Web3 consulting for <a href="https://bronze.ai" target="_blank">Bronze</a>, working on intelligent generative audio files and new creative tools for contemporary composition.
 
 - project: HQI
   role: Resident
-  duration: 2018 &mdash; Present
+  duration: 2018
   description: Resident at <a href="https://h-q-i.com/" target="_blank">HQI</a>, an independent, artist-run non-profit providing free studio facilities to visual and recording artists based in London.
 
 - project: Diary, She Wrote
