--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,12 @@
 # Skills
 - skill: Strategic Planning
-  description: Working within small technology teams and start-up companies to orient teams around delivering value quickly and defining a roadmap based on finding product-market fit and the technical dependencies of blockchain software development. 
+  description: Working with software engineers and start-up companies to orient teams around delivering value quickly and defining a roadmap based on finding product-market fit and the technical dependencies of blockchain software development. 
 
 - skill: Agile Methodologies & Scrum
-  description: Adopting agile frameworks to plan and monitor product development with constant iteration on ideas based on stakeholder feedback. I've guided complex projects to completion on time, within scope, and on budget. <br><br> Facilitating sprint planning, daily scrums, brainstorming sessions, stakeholder updates, and software demonstrations as a Product Owner across several scrum teams.
+  description: Adopting agile frameworks to plan and monitor product development with constant iteration on ideas based on stakeholder feedback. I've guided complex projects to completion on time, within scope, and on budget. <br><br> Facilitating sprint planning, daily scrums, brainstorming sessions, stakeholder updates, and software demonstrations as a Product function across several scrum teams.
 
 - skill: Technical Toolbox
-  description: GitHub, Jira, Confluence, Figma, Sketch, Notion, Discord, Asana, Trello, Postman, MS Office, G Analytics, Blender, Omnigraffle, Logic Pro, Audacity
+  description: Figma, GitHub, Jira, Linear, Confluence, Sketch, Notion, Discord, Asana, Monday, Trello, Postman, Sheets/Excel, G Analytics, Blender, Omnigraffle, Logic Pro, Audacity
 
 - skill: Developer Skills
-  description: (basic) Solidity, HTML, CSS, Javascript, Python, Bash, Markdown
+  description: HTML, CSS, Javascript, Python, Bash, Markdown, (basic) Solidity, (basic) Rust, (basic) Go
