added Archway logo

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
   company: Phi Labs
   position: Product Manager
   duration: Jan, 2023 &mdash; Present
-  summary: Core contributor to <a href="https://archway.io/" target="_blank">Archway</a>, a permissionless smart contract blockchain that enables sustainable economic models for developers via protocol-level rewards mechanisms.<ul class="resume-item-list"><li>Coordinated testing of the protocol prior to a successful mainnet launch with 100+ validators and token airdrop</li><li>Working with dApp teams to bring initial developer cohort on-chain and demonstrate unique use-cases</li><li>Shaping product strategy and supporting valuable integrations</li><li>Member of the community owned Liquidity Council delegating funds to dApps fostering protocol growth</li>
+  summary: Core contributor to <a href="https://archway.io/" target="_blank">Archway <img src="images/archway-circle.svg" alt="Archway Logo" width="16" height="16"></a>, a permissionless smart contract blockchain that enables sustainable economic models for developers via protocol-level rewards mechanisms.<ul class="resume-item-list"><li>Coordinated testing of the protocol prior to a successful mainnet launch with 100+ validators and token airdrop</li><li>Working with dApp teams to bring initial developer cohort on-chain and demonstrate unique use-cases</li><li>Shaping product strategy and supporting valuable integrations</li><li>Member of the community owned Liquidity Council delegating funds to dApps fostering protocol growth</li>
 
 # Cudos, Blockchain Product Manager
 - logo: images/cudos-logo.png
