--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ resume_section_interests:       true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  # resume_github_url:            "https://github.com/jglovier/resume-template"
+  resume_github_url:            "https://github.com/ethanill"
   resume_twitter_url:           "http://twitter.com/ethan_ill"
   resume_ethereum_url:          "https://gallery.so/ethanill"
   # resume_facebook_url:          "insert Facebook URL here"
